--- a/success.html
+++ b/success.html
@@ -11,7 +11,7 @@
 
     <!-- Custom styles for this template -->
     <link href="css/styles.css" rel="stylesheet">
-    <title>Success</title>
+    <title>Fantastic!</title>
 </head>
 <body>
     <div class="bg-light p-5 rounded-lg m-3">
