added favicon to all sites

--- a/signup.html
+++ b/signup.html
@@ -39,6 +39,8 @@
 
     <!-- Custom styles for this template -->
     <link href="css/styles.css" rel="stylesheet">
+    <!-- Favicon logo-->
+    <link rel="icon" href="favicon.ico">
 </head>
 
 <body class="text-center">
