--- a/success.html
+++ b/success.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -11,12 +12,16 @@
 
     <!-- Custom styles for this template -->
     <link href="css/styles.css" rel="stylesheet">
+    <!-- Favicon logo-->
+    <link rel="icon" href="favicon.ico">
     <title>Fantastic!</title>
 </head>
+
 <body>
     <div class="bg-light p-5 rounded-lg m-3">
         <h1 class="display-4">Thank you for signing up!</h1>
         <p class="lead">You have successfully signed up to the newsletter. You'll be hearing from us soon!</p>
-      </div>
+    </div>
 </body>
+
 </html>
