--- a/failure.html
+++ b/failure.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -11,15 +12,20 @@
 
     <!-- Custom styles for this template -->
     <link href="css/styles.css" rel="stylesheet">
+    <!-- Favicon logo-->
+    <link rel="icon" href="favicon.ico">
     <title>Failure</title>
 </head>
+
 <body>
     <div class="bg-light p-5 rounded-lg m-3">
         <h1 class="display-4">Uh oh!</h1>
-        <p class="lead">There was a problem signing you up. Please make sure all form fields are entered correctly and try again later.</p>
-    <form action="/failure" method="post">
-        <button type="submit" name="button" class="btn btn-lg btn-warning">Try Again</button>
-    </form>  
+        <p class="lead">There was a problem signing you up. Please make sure all form fields are entered correctly and
+            try again later.</p>
+        <form action="/failure" method="post">
+            <button type="submit" name="button" class="btn btn-lg btn-warning">Try Again</button>
+        </form>
     </div>
 </body>
+
 </html>
